@@ -7,6 +7,7 @@ import com.linecorp.armeria.common.HttpResponse;
 import com.linecorp.armeria.common.HttpStatus;
 import com.linecorp.armeria.server.annotation.ExceptionHandler;
 import com.linecorp.armeria.server.annotation.Get;
+import com.linecorp.armeria.server.annotation.Param;
 import com.linecorp.armeria.server.annotation.Post;
 import io.unitycatalog.server.exception.GlobalExceptionHandler;
 import io.unitycatalog.server.model.Commit;
@@ -15,6 +16,7 @@ import io.unitycatalog.server.persist.CommitRepository;
 import io.unitycatalog.server.persist.dao.CommitDAO;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @ExceptionHandler(GlobalExceptionHandler.class)
@@ -27,7 +29,7 @@ public class CoordinatedCommitsService {
     validateTablePath(commit);
 
     List<CommitDAO> firstAndLastCommits =
-        COMMIT_REPOSITORY.getFirstAndLastCommits(commit.getTableId());
+        COMMIT_REPOSITORY.getFirstAndLastCommits(UUID.fromString(commit.getTableId()));
     if (firstAndLastCommits.isEmpty()) {
       handleFirstCommit(commit);
     } else {
@@ -54,25 +56,27 @@ public class CoordinatedCommitsService {
 
   @Get("")
   public HttpResponse getCommits(
-      String tableId,
-      String tableUri,
-      Long startVersion,
-      Optional<String> tableFullName,
-      Optional<Integer> maxNumCommits) {
+      @Param("table_id") String tableId,
+      @Param("table_uri") String tableUri,
+      @Param("start_version") long startVersion,
+      @Param("table_full_name") Optional<String> tableFullName,
+      @Param("max_num_commits") Optional<Integer> maxNumCommits) {
     assert tableId != null;
     assert startVersion >= 0;
     assert maxNumCommits.orElse(0) >= 0;
 
     List<CommitDAO> commits =
         COMMIT_REPOSITORY.getLatestCommits(
-            tableId, maxNumCommits.orElse(MAX_NUM_COMMITS_PER_TABLE));
-    if (commits.isEmpty()) {
+            UUID.fromString(tableId), maxNumCommits.orElse(MAX_NUM_COMMITS_PER_TABLE));
+    int commitCount = commits.size();
+    if (commitCount == 0) {
       return HttpResponse.ofJson(new GetCommitsResponse().latestTableVersion(-1L));
-    } else if (commits.getLast().getIsBackfilledLatestCommit()) {
+    } else if (commits.get(commitCount - 1).getIsBackfilledLatestCommit()) {
       return HttpResponse.ofJson(
-          new GetCommitsResponse().latestTableVersion(commits.getLast().getCommitVersion()));
+          new GetCommitsResponse()
+              .latestTableVersion(commits.get(commitCount - 1).getCommitVersion()));
     } else {
-      long endVersion = Math.max(startVersion, commits.getFirst().getCommitVersion());
+      long endVersion = Math.max(startVersion, commits.get(0).getCommitVersion() + 1);
       return HttpResponse.ofJson(
           new GetCommitsResponse()
               .commits(
@@ -83,7 +87,7 @@ public class CoordinatedCommitsService {
                                   && c.getCommitVersion() < endVersion)
                       .map(CommitDAO::toCommitInfo)
                       .collect(Collectors.toList()))
-              .latestTableVersion(commits.getFirst().getCommitVersion()));
+              .latestTableVersion(commits.get(0).getCommitVersion()));
     }
   }
 }
